--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -1,5 +1,5 @@
 {% extends "todo/base.html" %}
-
+{% block title %}Current{% endblock %}
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-10">
