--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -1,5 +1,5 @@
 {% extends "todo/base.html" %}
-
+{% block title %}Sign Up{% endblock %}
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
