--- a/todo/templates/todo/viewtodo.html
+++ b/todo/templates/todo/viewtodo.html
@@ -1,11 +1,5 @@
-
-
-
-
-
-
 {% extends "todo/base.html" %}
-
+{% block title %}Edit Todo{% endblock %}
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
