Tests with selenium

--- a/todo/templates/todo/login.html
+++ b/todo/templates/todo/login.html
@@ -23,7 +23,7 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" class="form-control" id="password">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary" name="login-button">Login</button>
             </form>
             <hr>
             <div class="text-center">
