--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -28,7 +28,7 @@
                     <label for="password2">Confirm Password</label>
                     <input type="password" name="password2" class="form-control" id="password2">
                 </div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-primary" name="signup-button">Sign Up</button>
             </form>
             <hr>
             <div class="text-center">
